Trying out something

--- a/develop/index.html
+++ b/develop/index.html
@@ -49,7 +49,7 @@
                 </p>
                 <div class="images">
                     <div class="portraits">
-                        <img src="develop\images\phones.jpg">
+                        <img src="phones.jpg">
                     </div>
                     <div class="portraits">
                         <img src="C:\Users\em-rs\OneDrive\Pictures\phones1.jpg">
