Trying something else

--- a/develop/index.html
+++ b/develop/index.html
@@ -13,7 +13,7 @@
             <p>
                 Web Designer
             </p>
-            <img src="C:\Users\em-rs\OneDrive\Pictures\me.jpg" alt="Me, Myself and I" width="400px" height="400px"> 
+            <img src="./develop/images/me.jpg" alt="Me, Myself and I" width="400px" height="400px"> 
         </header>
 
         <nav>
@@ -49,7 +49,7 @@
                 </p>
                 <div class="images">
                     <div class="portraits">
-                        <img src="phones.jpg">
+                        <img src="./develop/images/phones.jpg">
                     </div>
                     <div class="portraits">
                         <img src="C:\Users\em-rs\OneDrive\Pictures\phones1.jpg">
