--- a/develop/index.html
+++ b/develop/index.html
@@ -13,7 +13,7 @@
             <p>
                 Web Designer
             </p>
-            <img src="./develop/images/me.jpg" alt="Me, Myself and I" width="400px" height="400px"> 
+            <img src="me.jpg" alt="Me, Myself and I" width="400px" height="400px"> 
         </header>
 
         <nav>
