--- a/develop/index.html
+++ b/develop/index.html
@@ -13,7 +13,7 @@
             <p>
                 Web Designer
             </p>
-            <img src="me.jpg" alt="Me, Myself and I" width="400px" height="400px"> 
+            <img src="./images/me.png" alt="Me, Myself and I" width="400px" height="400px"> 
         </header>
 
         <nav>
@@ -49,18 +49,18 @@
                 </p>
                 <div class="images">
                     <div class="portraits">
-                        <img src="./develop/images/phones.jpg">
+                        <img src="./images/phones.png">
                     </div>
                     <div class="portraits">
-                        <img src="C:\Users\em-rs\OneDrive\Pictures\phones1.jpg">
+                        <img src="./images/phones1.png">
                     </div>
                 </div>
                 <div class="images">
                     <div class="portraits">
-                        <img src="C:\Users\em-rs\OneDrive\Pictures\phones2.jpg">
+                        <img src="./images/phones2.png">
                     </div>
                     <div class="portraits">
-                        <img src="C:\Users\em-rs\OneDrive\Pictures\portfolio.jpg">
+                        <img src="./images/portfolio.png">
                     </div>
                 </div>
                 <p>
@@ -71,7 +71,7 @@
                 <p id="resume">
                     <h2>Resume</h2>
                 </p>
-                <embed src="C:\Users\em-rs\Downloads\Emilia Stewart Resume.pdf" width="100%" height="600px" />
+                <embed src="./pdf/Emilia Stewart Resume.pdf" width="100%" height="600px" />
 
 
                 <p id="contact">
@@ -80,25 +80,25 @@
                 
                 <div class="img">
                     <div class="contactinfo">
-                        <img src="C:\Users\em-rs\OneDrive\Pictures\pileofphones.jpg">
+                        <img src="./images/pileofphones.png">
                             <div>
                                 <a href="tel:+15062512712">506.251.2712</a>
                             </div>
                     </div>
                     <div class="contactinfo">
-                        <img src="C:\Users\em-rs\OneDrive\Pictures\email.jpg">
+                        <img src="./images/email.png">
                             <div>
                                 <a href="mailto:em-rstewart@hotmail.com">em-rstewart@hotmail.com</a>
                             </div>
                     </div>
                     <div class="contactinfo">
-                        <img src="C:\Users\em-rs\OneDrive\Pictures\github.jpg">
+                        <img src="./images/github.png">
                             <div>
                                 <a href="https://github.com/MerlinRose2000">MerlinRose2000</a>
                             </div>
                     </div>
                     <div class="contactinfo">
-                        <img src="C:\Users\em-rs\OneDrive\Pictures\linkedin.jpg">
+                        <img src="./images/linkedin.png">
                             <div>
                                 <a href="www.linkedin.com/in/emilia-stewart">emilia-stewart</a>
                             </div>
